feat: 增加React 处理事件的四种方式 refactor: 补充 JSX 相关

--- a/interview/前端进阶-甲.md
+++ b/interview/前端进阶-甲.md
@@ -49,7 +49,7 @@ arr.reduce((result, item, index, arr) => {
 
 #### React 的 JSX
 
-> JSX 允许我们在 Javascript 中写 HTML，而不是用 HTML 包含 Javascript。它能帮助我们快速开发，因为我们不用担心字符串和换行等。JSX 每一个组件都有一个 `render` 方法，这个方法产生一个`ViewModel 视图模型`–在返回 HTML 到组件之前，你可以将这个模型的信息放入视图中，意味着你的 HTML 会根据这个模型动态改变(例如一个动态列表)。一旦你完成了操作，就可以返回你想渲染(`render`)的东西
+> **`JSX` 是 `React.createElement(component, props, …children)` 提供的语法糖**。JSX 允许我们在 Javascript 中写 HTML，而不是用 HTML 包含 Javascript。它能帮助我们快速开发，因为我们不用担心字符串和换行等。JSX 每一个组件都有一个 `render` 方法，这个方法产生一个`ViewModel 视图模型`–在返回 HTML 到组件之前，你可以将这个模型的信息放入视图中，意味着你的 HTML 会根据这个模型动态改变(例如一个动态列表)。一旦你完成了操作，就可以返回你想渲染(`render`)的东西
 
 #### JSX 的注意点
 
@@ -58,6 +58,30 @@ arr.reduce((result, item, index, arr) => {
 2. 在 JSX 中可以直接使用 JS 代码，直接在 JSX 中通过 `{}` 中间写 JS 代码即可
 3. 在 JSX 中只能使用表达式，但是 **不能出现语句**！！！
 4. 在 JSX 中注释语法：{/_ 中间是注释的内容 _/}
+5. 组件名称用大驼峰，原因如下
+
+   `React.createElement(component, props, …children)` 中，`component` 的类型是：`string` / `ReactClass type`
+
+   - `string` 类型 `React` 会觉得他是一个原生 dom 节点
+   - `ReactClass type` 类型 自定义组件
+
+   ```jsx
+   import React from 'react'
+
+   function myDiv() {
+       return (<div><div>)
+   }
+   <myDiv></myDiv>
+
+   // 转换为 js 的时候就变成了
+
+   function MyDiv() {
+     return React.createElement("div", null);
+   }
+
+   React.createElement("myDiv", null);
+   // 由于找不到 myDiv 这个 dom，所以就会报错。
+   ```
 
 #### React 组件生命周期
 
@@ -68,6 +92,19 @@ arr.reduce((result, item, index, arr) => {
 1. constructor
 
 > 就是 `ES6` 里的构造函数，创建一个组件类的实例，在这一过程中我们要进行两步操作：初始化 state，绑定成员函数的 this 环境
+
+```javascript
+class Component {
+  constructor(props) {
+    // 记得调用 super 和传递 props
+    super(props);
+
+    this.state = {
+      // ...
+    };
+  }
+}
+```
 
 2. getInitialState 和 getDefaultProps
 
@@ -112,6 +149,103 @@ arr.reduce((result, item, index, arr) => {
 - 调用 `this.setState` (并不是一次 `setState` 会触发一次 `render`，`React` 可能会合并操作，再统一 `render`)
 - 父组件发生更新(`props` 发生改变，但是就算 `props` 没有改变或者父子组件之间没有数据交换也会重新 `render`)
 - 使用 `this.forceUpdate` 强制 `render`
+
+#### React 处理事件的四种方式
+
+```jsx
+import React from "react";
+class Foo extends React.Component {
+  handleClick() {
+    this.setState({ xxx: aaa }); // this is 'undefined'
+  }
+
+  render() {
+    return <button onClick={this.handleClick}>Click me</button>;
+  }
+}
+
+// button的创建会被转化为：
+React.createElement(
+  "button",
+  {
+    onClick: this.handleClick
+  },
+  "Click me"
+);
+```
+
+`jsx` 实际上是 `React.createElement(component, props, …children)` 函数提供的语法糖，那么上面这段 `jsx` 代码的 `handleClick` 会通过 `addEventListener` 统一注册到 document 上，存储在事件池中，当在事件触发的时候，通过 `dispatchEvent` 进行事件分发。最终 `handleClick` 会作为一个回调函数调用，函数中的 `this` 也就丢失了指向，变成了 `undefined`。下面我们说四种应对方式。
+
+##### 一、直接在函数 bind this
+
+```jsx
+class Foo extends React.Component {
+  handleClick() {
+    this.setState({ xxx: aaa });
+  }
+
+  render() {
+    return <button onClick={this.handleClick.bind(this)}>Click me</button>;
+  }
+}
+```
+
+###### 缺点：性能不太好，每次 render 都会进行 bind
+
+##### 二、constuctor 手动 bind 型
+
+```jsx
+class Foo extends React.Component {
+  constuctor(props) {
+    super(props);
+    this.handleClick = this.handleClick.bind(this);
+  }
+  handleClick() {
+    this.setState({ xxx: aaa });
+  }
+
+  render() {
+    return <button onClick={this.handleClick}>Click me</button>;
+  }
+}
+```
+
+###### 缺点：有点臃肿
+
+##### 三、箭头函数型（使用额外传参推荐）
+
+```jsx
+class Foo extends React.Component {
+  handleClick(event, str) {
+    console.log(str);
+    this.setState({ xxx: aaa });
+  }
+
+  render() {
+    return (
+      <button onClick={(e) => this.handleClick(e, "hello")}>Click me</button>
+    );
+  }
+}
+```
+
+###### 优点：书写方便，多参数传参方便。
+
+###### 缺点：每次 render 都会重复创建函数，性能会差一点。
+
+##### 四、public class fields 型（使用原生参数推荐）
+
+```jsx
+class Foo extends React.Component {
+  handleClick = () => {
+    this.setState({ xxx: aaa });
+  };
+
+  render() {
+    return <button onClick={this.handleClick}>Click me</button>;
+  }
+}
+```
 
 #### Virtual DOM 算法简述
 
