feat: 增加常见异常类型

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -90,6 +90,52 @@ Q: 使用 HTTPS 会被抓包吗？
 
 > 第三方 Cookie 的接受率不如第一方 Cookie（不过主流的浏览器默认的设置下也接受带 P3P 协议的第三方 Cookie，我的经验是接受率能达 到 90％，甚至 95％以上），但在某些特定情况下可以实现第一方 Cookie 无法实现的功能。比如，当我们有多个域名的网站需要跟踪，我们希望了解到用户点击某个广告到达域名 A 下的网页，然后可能浏览了不论那个域名下的页面，最后在域名 B 下的网页完成注册的情况。广告可以在域名 A 下的网页被跟踪到，而注册可以在域名 B 下的网页跟踪到。如果我们使用第一方 Cookie，会为域名 A 建立一个 Cookie，为域名 B 再建立一个 Cookie，他们可以关联各自域名下网页上的行为，但是无法关联起来。而使用第三方 Cookie，那么无论多少个域，都只有一个 Cookie，一个属于第三方域的 Cookie，网站下所有域都能共享这个 Cookie，那么所有的行为都能被关联起来分析。
 
+#### 常见异常类型
+
+##### 一、Error
+
+`Error` 是最基本的错误类型，其他的错误类型都继承自该类型。`Error` 对象主要有两个重要属性 `message` 和 `name` 分别表示错误信息和错误名称。
+
+  <img src="./../resource/chatAbout_errorA.jpeg" />
+
+> 程序运行过程中抛出的异常一般都有具体的类型，`Error` 类型一般都是开发人员自己抛出的异常。
+
+##### 二、SyntaxError - 语法错误
+
+语法错误也称为解析错误，在任何编程语言中都是最常见的错误类型。`JavaScript` 是一门解释性语言，`SyntaxError` 错误是在生成 `AST` 语法树的时候抛出来的，表示不符合编程语言的语法规范。
+
+  <img src="./../resource/chatAbout_errorB.jpeg" />
+
+> 因此 `SyntaxError` 应该和其他类型的异常区分开，此类异常发生在 `JavaScript` 解析/编译时，此类异常一旦发生，导致整个 `js` 文件都无法执行，而其他异常发生在代码运行时，这一类的错误会导致在错误出现的那一行之后的代码无法执行，但在那一行之前的代码不会受到影响。
+
+##### 三、TypeError - 类型错误
+
+运行时最常见的异常，表示变量或参数不是预期类型，比如 `new` 关键字后面必须为『 构造函数 』、`()`前必须为『 函数 』。
+
+  <img src="./../resource/chatAbout_errorC.jpeg" />
+
+##### 四、ReferenceError - 引用错误
+
+引用一个不存在的变量时发生的错误，每当我们创建或定义一个变量时，变量名称都会写入一个变量存储中心中。这个变量存储中心就像键值存储一样，每当我们引用变量时，它都去存储中找到 `key` 并提取并返回 `value`，如果我们要找的变量不在存储中，就会抛出 `ReferenceError`。
+<img src="./../resource/chatAbout_errorD.jpeg" />
+
+> 如果我们调用的是一个已经存在的变量的一个不存在的属性，则不会抛出 `ReferenceError`，因为变量本身已经在存储中了，调用它不存在的属性只会是未定义状态，也就是 `undefined`。
+
+##### 五、RangeError - 边界错误
+
+表示超出有效范围时发生的异常，主要的有以下几种情况：
+
+- 数组长度为负数或超长；
+- 数字类型的方法参数超出预定义范围；
+- 函数堆栈调用超过最大值；
+
+<img src="./../resource/chatAbout_errorE.jpeg" />
+
+##### 六、URIError - URL 错误
+
+在调用 URI 相关的方法中 URL 无效时抛出的异常，主要包括 `encodeURI(）`、`decodeURI()`、`encodeURIComponent()`、`decodeURIComponent()`、`escape()`和 `unescape(）`几个函数。
+<img src="./../resource/chatAbout_errorF.jpeg" />
+
 #### CSRF 攻击实例
 
 CSRF 跨站域请求伪造 **_Cross Site Request Forgery_**：可以在受害者毫不知情的情况下以受害者名义伪造请求发送给受攻击站点，从而在并未授权的情况下执行在权限保护之下的操作。
