feat: 增加二叉树遍历

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -352,6 +352,178 @@ let widthTraversal = (node) => {
 };
 ```
 
+#### 二叉树遍历
+
+对于如下二叉树，求解前序遍历、中序遍历、后序遍历结果
+
+<div align=center width=100>
+
+![](./../resource/advanced_binaryTree.png)
+
+</div>
+
+```javascript
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+const root = {
+  val: 1,
+  left: {
+    val: 2,
+    right: {
+      val: 4,
+      left: { val: 5 }
+    }
+  },
+  right: {
+    val: 3,
+    left: { val: 7 },
+    right: { val: 8 }
+  }
+};
+```
+
+###### 前序遍历（根在前，从左往右，一棵树的根永远在左子树前面，左子树又永远在右子树前面 ）
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 递归方式
+ */
+var pre_order = function (root) {
+  let res = [];
+  const traversal = (node) => {
+    if (!node || !node.val) return;
+    res.push(node.val);
+    traversal(node.left);
+    traversal(node.right);
+  };
+  traversal(root);
+  return res;
+};
+// [ 1, 2, 4, 5, 3, 7, 8 ]
+```
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 非递归方式
+ */
+var pre_order = function (root) {
+  let stack = [];
+  let nodes = [];
+  if (root) {
+    stack.push(root);
+    while (stack.length) {
+      const currentNode = stack.pop();
+      nodes.push(currentNode.val);
+      if (currentNode.right) stack.push(currentNode.right);
+      if (currentNode.left) stack.push(currentNode.left);
+    }
+  }
+  return nodes;
+};
+// [ 1, 2, 4, 5, 3, 7, 8 ]
+```
+
+###### 中序遍历（根在中，从左往右，一棵树的左子树永远在根前面，根永远在右子树前面）
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 递归方式
+ */
+var mid_order = function (root) {
+  let res = [];
+  const traversal = (node) => {
+    if (!node || !node.val) return;
+    traversal(node.left);
+    res.push(node.val);
+    traversal(node.right);
+  };
+  traversal(root);
+  return res;
+};
+// [ 2, 5, 4, 1, 7, 3, 8 ]
+```
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 非递归方式
+ */
+var mid_order = function (root) {
+  let stack = [];
+  let nodes = [];
+  while (stack.length || root) {
+    while (root) {
+      stack.push(root);
+      root = root.left;
+    }
+    root = stack.pop();
+    nodes.push(root.val);
+    root = root.right;
+  }
+  return nodes;
+};
+// [ 2, 5, 4, 1, 7, 3, 8 ]
+```
+
+###### 后序遍历（根在后，从左往右，一棵树的左子树永远在右子树前面，右子树永远在根前面）
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 递归方式
+ */
+var post_order = function (root) {
+  let res = [];
+  const traversal = (node) => {
+    if (!node || !node.val) return;
+    traversal(node.left);
+    traversal(node.right);
+    res.push(node.val);
+  };
+  traversal(root);
+  return res;
+};
+// [ 5, 4, 2, 7, 8, 3, 1 ]
+```
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 非递归方式
+ */
+var post_order = function (root) {
+  let stack = [];
+  let nodes = [];
+  if (root) {
+    stack.push(root);
+    while (stack.length) {
+      const currentNode = stack.pop();
+      nodes.unshift(currentNode.val);
+      if (currentNode.left) stack.push(currentNode.left);
+      if (currentNode.right) stack.push(currentNode.right);
+    }
+  }
+
+  return nodes;
+};
+// [ 5, 4, 2, 7, 8, 3, 1 ]
+```
+
 #### JS 异步解决方案的发展历程以及优缺点
 
 ##### 1.回调函数 callback
