--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -121,7 +121,15 @@ m.get(["a"]); // undefined。表面键相同但是内存地址不一样
     HTML中的script标签可以加载并执行其他域的javascript，于是我们可以通过script标记来动态加载其他域的资源
 ```
 
-#### Css 中 white-space、word-break、word-wrap
+#### CSS 的单位
+
+<div align=center>
+
+![](./../resource/interview_CSSUnit.png)
+
+</div>
+
+#### CSS 中 white-space、word-break、word-wrap
 
 - white-space: 用来控制空白符的显示，同时控制是否自动换行。常用`normal`(正常换行)、`nowrap`(不换行)
 - word-break: 控制单纯如何被拆分换行。`normal`、`break-all`、`keep-all`
