feat: 二叉树遍历增加层序遍历

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -524,6 +524,54 @@ var post_order = function (root) {
 // [ 5, 4, 2, 7, 8, 3, 1 ]
 ```
 
+###### 层序遍历（一层一层遍历）
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 递归方式
+ */
+var level_order = function (root) {
+  let res = [];
+  const traversal = (node, index) => {
+    if (!node) return;
+    if (!res[index]) res[index] = [];
+    res[index].push(node.val);
+    traversal(node.left, index + 1);
+    traversal(node.right, index + 1);
+  };
+  traversal(root, 0);
+  return res;
+};
+// [ [ 1 ], [ 2, 3 ], [ 4, 7, 8 ], [ 5 ] ]
+```
+
+```javascript
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ * @description 非递归方式
+ */
+var level_order = function (root) {
+  let res = [];
+  if (!root) return res;
+  const stack = [root];
+  while (stack.length) {
+    const currentLen = stack.length;
+    res.push([]);
+    for (let i = 0; i < currentLen; i++) {
+      const node = stack.shift();
+      res[res.length - 1].push(node.val);
+      if (node.left) stack.push(node.left);
+      if (node.right) stack.push(node.right);
+    }
+  }
+  return res;
+};
+// [ [ 1 ], [ 2, 3 ], [ 4, 7, 8 ], [ 5 ] ]
+```
+
 #### JS 异步解决方案的发展历程以及优缺点
 
 ##### 1.回调函数 callback
