feat: 增加二进制与十进制互转

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -169,6 +169,33 @@ for (let i = 0; i <= oBtn.length; i++) {
 0.3 - 0.2 - 0.1 <= Number.EPSILON; // true
 ```
 
+#### 二进制与十进制互转
+
+##### `toString()`方法可把一个 `Number` 对象转换为一个字符串，并返回结果。
+
+###### 语法：_num.toString(radix);_
+
+其中，`radix` 为可选。规定表示数字的基数，为 `2 ~ 36` 之间的整数。若省略该参数，则使用基数 `10`。但是要注意，如果该参数是 10 以外的其他值，则 ECMAScript 标准允许实现返回任意值。
+
+##### `parseInt()` 函数可解析一个字符串，并返回一个整数。
+
+###### 语法：_parseInt(string, radix);_
+
+其中，`string` 为必需。要被解析的字符串。`radix` 为可选。表示要解析的数字的基数。该值介于 `2 ~ 36` 之间。如果省略该参数或其值为 `0`，则数字将以 `10` 为基础来解析。如果它以 `0x` 或 `0X` 开头，将以 `16` 为基数。如果该参数小于 `2` 或者大于 `36`，则 `parseInt()` 将返回 `NaN`。
+
+```javascript
+parseInt(num, 8); // 八进制转十进制
+parseInt(num, 16); // 十六进制转十进制
+parseInt(num).toString(8); // 十进制转八进制
+parseInt(num).toString(16); // 十进制转十六进制
+parseInt(num, 2).toString(8); // 二进制转八进制
+parseInt(num, 2).toString(16); // 二进制转十六进制
+parseInt(num, 8).toString(2); // 八进制转二进制
+parseInt(num, 8).toString(16); // 八进制转十六进制
+parseInt(num, 16).toString(2); // 十六进制转二进制
+parseInt(num, 16).toString(8); // 十六进制转八进制
+```
+
 #### 截取字符串 slice/splice/substr/substring(n,m)
 
 ```javascript
