feat: 增加关于 this 指向

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -63,6 +63,12 @@ var tj3 = new Person();
 console.log(tj3);
 ```
 
+#### 关于 this 指向
+
+1. 如果 `this` 是 在一个函数中，并且被用作方法来使用，那么这个时候的 `this` 就指向了父级对象;
+2. 如果 `this` 是在匿名函数，或者全局环境的函数中，那么这个时候的 `this` 就是 `undefined`;
+3. 如果 `this` 是在构造函数中，那么这个时候的 `this` 就指向了即将生成的那个对象
+
 #### 事件轮询机制 bind、apply、call 的区别
 
 `call` 和 `apply` 都是对函数的直接调用，**改变 this 指针指向即改变作用域**
