feat: 增加手写函数合成

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -237,6 +237,34 @@ function add() {
 }
 ```
 
+#### 手写函数合成
+
+```javascript
+function compose(...funcs) {
+  return function (x) {
+    return funcs.reduce(function (arg, fn) {
+      return fn(arg);
+    }, x);
+  };
+}
+
+function lowerCase(value) {
+  return value && typeof value === "string" ? value.toLowerCase() : value;
+}
+
+function trim(value) {
+  return typeof value === "string" ? value.trim() : value;
+}
+
+function split(value, delimiter = ",") {
+  return typeof value === "string" ? value.split(delimiter) : value;
+}
+
+const func = compose(trim, lowerCase, split);
+
+func(" a,B,C "); // " a,B,C " -> "a,B,C" -> 'a,b,c' -> ["a", "b", "c"]
+```
+
 #### 函数防抖、函数节流
 
 - 函数防抖：(任务触发的间隔超过指定间隔的时候，任务才会执行)
