refactor: 更新二叉树层序遍历非递归写法

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -588,20 +588,22 @@ var level_order = function (root) {
  * @description 非递归方式
  */
 var level_order = function (root) {
-  let res = [];
-  if (!root) return res;
-  const stack = [root];
-  while (stack.length) {
-    const currentLen = stack.length;
-    res.push([]);
-    for (let i = 0; i < currentLen; i++) {
-      const node = stack.shift();
-      res[res.length - 1].push(node.val);
-      if (node.left) stack.push(node.left);
-      if (node.right) stack.push(node.right);
+  let nodes = [];
+  let stack = [];
+  if (root) {
+    stack.push(root);
+    while (stack.length) {
+      const { length } = stack;
+      nodes.push([]);
+      for (let i = 0; i < length; i++) {
+        const node = stack.shift();
+        nodes[nodes.length - 1].push(node.val);
+        if (node.left) stack.push(node.left);
+        if (node.right) stack.push(node.right);
+      }
     }
   }
-  return res;
+  return nodes;
 };
 // [ [ 1 ], [ 2, 3 ], [ 4, 7, 8 ], [ 5 ] ]
 ```
