refactor: 更新Vue/React 组件间通信

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -52,6 +52,7 @@ new Vue{(
   > 在需要接收数据的组件中用 `bus.$on` 监听自定义事件，并在回调函数中处理传递过来的参数
 - 父向子传值：在组件中绑定属性，子组件中 `props` 就可以获取
 - 子向父传值：通过在子组件方法中调用`$emit(方法名, 参数)`,方法名父组件中用 `on` 绑定
+- 跨级传参：`Vuex`、`$attrs、$listeners`、`Provide、inject`
 
 ##### REACT
 
@@ -59,6 +60,7 @@ new Vue{(
   > 两个属性：一个是 `Context` 生产者『 Provider 』，通常是一个父节点，另外是一个 `Context` 的消费者『 Consumer 』，通常是一个或者多个子节点。所以 `Context` 的使用基于生产者消费者模式
 - 父向子传值：在组件中绑定属性，子组件中 `props` 就可以获取
 - 子向父传值：通过在子组件方法中通过 `props` 获取方法名，回调的方式传值
+- 跨级传参：外部库比如`redux`、`Provider、Consumer`
 
 #### Vue 2.X 源码之『 VNode 』:checkered_flag:
 
