feat: 增加Vue 的 v-model 是什么 refactor: 修改NextTick介绍

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -194,6 +194,8 @@ JS 执行是单线程的，它基于`事件循环`。事件大致分为以下几
 
 > 结合 `setter` 分析，数据的变化到 `Dom` 的重新渲染是一个异步的过程，发生在下一个 `tick`。开发过程中，比如在服务端接口异步获取数据时候，如果某些方法是依赖数据修改后的 `DOM`，就必须将方法写在 `nextTick` 后执行。
 
+> `NextTick` 根据执行环境分别尝试采用 `Promise`、`MutationObserver`、`setImmediate`，如果以上都不行则采用 `setTimeout` 定义了一个异步方法，多次调用 `nextTick` 会将方法存入队列中，通过这个异步方法清空当前队列。
+
 ```javascript
 getNames(res).then(() => {
   this.userNames = res.data;
@@ -310,3 +312,18 @@ React 和 Vue 做的假设是：
 > 如果变化发生在不同层或者同样的元素用户指定了不同的 `key` 或者不同元素用户指定同样的 `key`，React 和 Vue 都不会检测到，就会发生莫名其妙的问题。
 
 但是 React 认为，前端碰到上面的第一种情况概率很小，第二种情况又可以通过提示用户，让用户去解决，因此这个取舍是值得的。没有牺牲空间复杂度，却换来了在大多数情况下时间上的巨大提升。
+
+#### 说说对 SSR 的了解
+
+`SSR` 也就是服务端渲染，也就是将 `Vue` 在客户端把标签渲染成 `HTML` 的工作放在服务端完成，然后再把 `html` 直接返回给客户端
+
+##### SSR 的优势
+
+- 更好的 `SEO`
+- 首屏加载速度更快
+
+##### SSR 的缺点
+
+- 开发条件会受到限制，服务器端渲染只支持 `beforeCreate` 和 `created` 两个钩子
+- 当我们需要一些外部扩展库时需要特殊处理，服务端渲染应用程序也需要处于 `Node.js` 的运行环境
+- 更多的服务端负载
