--- a/interview/前端进阶-甲.md
+++ b/interview/前端进阶-甲.md
@@ -359,3 +359,9 @@ javascript 函数创建, 需要注意:
 - 父组件可以使用 `props` 把数据传给子组件。
 - 子组件可以使用 `$emit` 触发父组件的自定义事件。
   > vm.\$emit( event, […args] ) // 子组件通过 **\$emit** 来触发事件，将参数传递出去。
+
+#### Vue 的 v-model 是什么
+
+- `v-model` 是用来在表单控件或者组件上创建双向绑定的
+- 他的本质是 `v-bind` 和 `v-on` 的语法糖
+- 在一个组件上使用 `v-model`，默认会为组件绑定名为 `value` 的 `prop` 和名为 `input` 的事件
