feat: 增加Vue 3.X 新特性

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -327,3 +327,30 @@ React 和 Vue 做的假设是：
 - 开发条件会受到限制，服务器端渲染只支持 `beforeCreate` 和 `created` 两个钩子
 - 当我们需要一些外部扩展库时需要特殊处理，服务端渲染应用程序也需要处于 `Node.js` 的运行环境
 - 更多的服务端负载
+
+#### - Vue 3.X 新特性 :checkered_flag:
+
+##### 监测机制的改变
+
+- 3.0 将带来基于代理 `Proxy` 的 `observer` 实现，提供全语言覆盖的反应性跟踪。
+- 消除了 Vue 2 当中基于 `Object.defineProperty` 的实现所存在的很多监测限制：
+
+  - 可以检测属性的添加和删除；
+  - 可以检测数组索引和长度的变更；
+  - 支持了 `Map`、`Set`、`WeakMap` 和 `WeakSet`。
+
+##### 模板
+
+- 模板方面没有大的变更，只改了作用域插槽，2.x 的机制导致作用域插槽变了，父组件会重新渲染，而 3.0 把作用域插槽改成了函数的方式，这样只会影响子组件的重新渲染，提升了渲染的性能。
+- 同时，对于 `render` 函数的方面，vue3.0 也会进行一系列更改来方便习惯直接使用 `api` 来生成 `vdom` 。
+
+##### 对象式的组件声明方式
+
+- vue2.x 中的组件是通过声明的方式传入一系列 `option`，和 `TypeScript` 的结合需要通过一些装饰器的方式来做，虽然能实现功能，但是比较麻烦。
+- 3.0 修改了组件的声明方式，改成了类式的写法，这样使得和 `TypeScript` 的结合变得很容易
+
+##### 其它方面的更改
+
+- 支持自定义渲染器，从而使得 `weex` 可以通过自定义渲染器的方式来扩展，而不是直接 `fork` 源码来改的方式。
+- 支持 `Fragment`（多个根节点）和 `Protal`（在 dom 其他部分渲染组建内容）组件，针对一些特殊的场景做了处理。
+- 基于 `tree shaking` 优化，提供了更多的内置功能。
