--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -79,3 +79,20 @@
 它的键名所引用的对象都是`弱引用`，就是垃圾回收机制遍历的时候不考虑该引用。
 只要所引用的对象的其他引用都被清除，垃圾回收机制就会释放该对象所占用的内存。
 也就是说，一旦不再需要，WeakMap 里面的键名对象和所对应的键值对会自动消失，不用手动删除引用。
+
+#### 手写 Array.flat
+
+```javascript
+Array.prototype.flat = function () {
+  let arr = [];
+  this.forEach((item) => {
+    if (Array.isArray(item)) arr = arr.concat(item.flat());
+    else arr.push(item);
+  });
+
+  return arr;
+};
+
+[[2], [[2, 3], [2]], 3, 4].flat();
+// [2, 2, 3, 2, 3, 4]
+```
