feat: 增加GET 和 POST 请求区别

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -75,7 +75,7 @@ Math数学对象：ceil(数值)向下取整、floor(数值)向上取整、min(nu
 1. 通过新建数组，遍历查找方法去重存入，第二个循环可以用`indexOf`替换)
 
 ```javascript
-Array.prototype.unique1 = function(arr) {
+Array.prototype.unique1 = function (arr) {
   var newArr = [];
   for (var i in arr) {
     var repeat = false;
@@ -98,7 +98,7 @@ console.log(arr.unique1());
 2. 先排序，再向新数组最后一位查重存入
 
 ```javascript
-Array.prototype.unique2 = function() {
+Array.prototype.unique2 = function () {
   this.sort(); //先排序
   var newArr = [this[0]];
   for (var i = 1; i < this.length; i++) {
@@ -115,7 +115,7 @@ console.log(arr.unique2());
 3. 能通过`json`对象的方式判断去重并计算重复次数，缺点是只支持`Numbe`r 数据类型，解决方式可以在`key`值上下功夫，`typeof`+`key`的形式
 
 ```javascript
-Array.prototype.unique3 = function() {
+Array.prototype.unique3 = function () {
   var obj = {};
   for (var i = 0; i < this.length; i++) {
     if (!obj[this[i]]) {
@@ -352,3 +352,24 @@ function quickSort(arr) {
 > 引用类型可以用 `instanceOf Array`;  
 > 原型链方法`.constructor == Array`;  
 > 通用的方法 `Object.prototype.toString.call(数据)`;
+
+#### GET 和 POST 请求区别
+
+- GET 在浏览器回退时是无害的，而 POST 会再次提交请求。
+
+- GET 请求只能进行 url 编码，而 POST 支持多种编码方式。
+
+- GET 请求在 URL 中传送的参数是有长度限制的，而 POST 没有。
+
+- 对参数的数据类型，GET 只接受 ASCII 字符，而 POST 没有限制。
+
+- GET 比 POST 更不安全，因为参数直接暴露在 URL 上，所以不能用来传递敏感信息。
+
+- GET 参数通过 URL 传递，POST 放在 Request body 中。
+
+- GET 和 POST 本质上就是 TCP 链接，并无差别。但是由于 HTTP 的规定和浏览器/服务器的限制，导致他们在应用过程中体现出一些不同：
+
+  > 业界不成文的规定是，（大多数）浏览器通常都会限制 url 长度在 2K 个字节，而（大多数）服务器最多处理 64K 大小的 url。超过的部分，恕不处理。如果你用 GET 服务，在 request body 偷偷藏了数据，不同服务器的处理方式也是不同的，有些服务器会读出数据，有些服务器直接忽略，所以，虽然 GET 可以带 request body，也不能保证一定能被接收到。
+
+- GET 产生一个 TCP 数据包；POST 产生两个 TCP 数据包。
+  > 对于 GET 方式的请求，浏览器会把 http header 和 data 一并发送出去，服务器响应 200（返回数据）； 而对于 POST，浏览器先发送 header，服务器响应 100 continue，浏览器再发送 data，服务器响应 200 ok（返回数据）。
