--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -210,9 +210,15 @@ getNames(res).then(() => {
 
 #### macro/micro task 宏任务、微任务
 
-浏览器为了能够使 `JS` 内部 `macro task` 与 `DOM` 任务能有序的执行，会在一个 `macro task` 执行结束后，在下一个 `macro task` 执行开始前，队列没进行重新渲染；
+在事件循环中，每进行一次循环操作称为 `tick`，每一次 `tick` 的任务处理模型是比较复杂的，但关键步骤如下：
 
-> 执行顺序：_macro task_ --> _渲染 DOM_ --> _macro task_
+- 执行一个宏任务（栈中没有就从事件队列中获取）
+- 执行过程中如果遇到微任务，就将它添加到微任务的任务队列中
+- 宏任务执行完毕后，立即执行当前微任务队列中的所有微任务（依次执行）
+- 当前宏任务执行完毕，开始检查渲染，然后 `GUI` 线程接管渲染
+- 渲染完毕后，`JS` 线程继续接管，开始下一个宏任务（从事件队列中获取）
+
+![](./../resource/interview_eventLoop.png)
 
 - 宏任务（macro task）主要包含：
   - script
