feat: 增加history修改 URL 的方法

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -63,12 +63,22 @@ Math数学对象：ceil(数值)向下取整、floor(数值)向上取整、min(nu
 
   location(地址栏对象)：host 主机、port 端口、href 地址
 
-  history(历史记录)：length 历史记录数目、back()/forward()/go()
+  history(历史记录)：length 历史记录数目
 
   screen(屏幕对象)：height/width
 
   document HTML 文档对象
 ```
+
+#### history 修改 URL 的方法
+
+window.history 常见的操作有：
+
+- back()：后退到上一个路由；
+- forward()：前进到下一个路由，如果有的话；
+- go(number)：进入到任意一个路由，正数为前进，负数为后退；
+- pushState(obj, title, url)：前进到指定的 URL，**不刷新页面**；
+- replaceState(obj, title, url)：用 url 替换当前的路由，**不刷新页面**；
 
 #### 数组去重四种方式
 
