feat: 增加hash 路由和 history 路由区别

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -80,6 +80,11 @@ window.history 常见的操作有：
 - pushState(obj, title, url)：前进到指定的 URL，**不刷新页面**；
 - replaceState(obj, title, url)：用 url 替换当前的路由，**不刷新页面**；
 
+#### hash 路由和 history 路由区别
+
+- `hash`：监听 `url` 中 `hash` 的变化，然后渲染不同的内容，这种路由不向服务器发送请求，**不需要服务端的支持**；
+- `history`：监听 `url` 中的路径变化，**需要客户端和服务端共同的支持**；
+
 #### 数组去重四种方式
 
 1. 通过新建数组，遍历查找方法去重存入，第二个循环可以用`indexOf`替换)
