refactor: 优化手写 apply

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -106,7 +106,7 @@ alert(bindFun(10, 10)); //20
 Funtion.prototype.mycall = function (context, ...args) {
   const cxt = context ? Object(context) : window; // 返回 this 参数或者 window,this 参数可能为基本数据类型，通过 Object 转换一下
   cxt.fn = this;
-  let res = cxt.fn(...args);
+  const res = cxt.fn(...args);
   delete cxt.fn;
   return res;
 };
@@ -115,12 +115,10 @@ Funtion.prototype.mycall = function (context, ...args) {
 ##### 手写 apply
 
 ```javascript
-Function.prototype.myapply = function (context, arr) {
+Function.prototype.myapply = function (context, arr = []) {
   const cxt = context ? Object(context) : window;
   cxt.fn = this;
-  let res;
-  if (arr) res = cxt.fn(...arr);
-  else res = cxt.fn();
+  const res = cxt.fn(...arr);
   delete cxt.fn;
   return res;
 };
