feat: 增加手写 Promise

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -263,7 +263,7 @@ const func = compose(trim, lowerCase, split);
 func(" a,B,C "); // " a,B,C " -> "a,B,C" -> 'a,b,c' -> ["a", "b", "c"]
 ```
 
-#### 函数防抖、函数节流
+#### 手写 函数防抖、函数节流
 
 - 函数防抖：(任务触发的间隔超过指定间隔的时候，任务才会执行)
   - 定义：多次触发事件后，事件处理函数只执行一次，并且是在触发操作结束时执行。
@@ -298,7 +298,7 @@ func(" a,B,C "); // " a,B,C " -> "a,B,C" -> 'a,b,c' -> ["a", "b", "c"]
   }
   ```
 
-#### 深度遍历
+#### 手写 深度遍历
 
 ```javascript
 // 方案一
@@ -357,7 +357,7 @@ let deepTraversal3 = (node) => {
 };
 ```
 
-#### 广度遍历
+#### 手写 广度遍历
 
 ```javascript
 let widthTraversal = (node) => {
@@ -384,7 +384,7 @@ let widthTraversal = (node) => {
 };
 ```
 
-#### 二叉树遍历
+#### 手写 二叉树遍历
 
 对于如下二叉树，求解前序遍历、中序遍历、后序遍历结果
 
@@ -606,6 +606,269 @@ var level_order = function (root) {
 // [ [ 1 ], [ 2, 3 ], [ 4, 7, 8 ], [ 5 ] ]
 ```
 
+#### 手写 Promise 及相关
+
+`Promise` 应用解析：[原文](https://juejin.cn/post/6844903625769091079#heading-0)
+
+- `Promise` 存在三个状态（state）`pending`、`fulfilled`、`rejected`
+
+- `pending`（等待态）为初始态，并可以转化为 `fulfilled`（成功态）和 `rejected`（失败态）
+
+- 成功时，不可转为其他状态，且必须有一个不可改变的值（`value`）
+
+- 失败时，不可转为其他状态，且必须有一个不可改变的原因（`reason`）
+
+- `new Promise((resolve, reject)=>{resolve(value)})` `resolve` 为成功，接收参数 `value`，状态改变为 `fulfilled`，不可再次改变。
+
+- `new Promise((resolve, reject)=>{reject(reason)})` `reject` 为失败，接收参数 `reason`，状态改变为 `rejected`，不可再次改变。
+
+- 若是 `executor` 函数报错 直接执行 `reject()`;
+
+`Promise` 有一个叫做 `then` 的方法，里面有两个参数：`onFulfilled`,`onRejected`,成功有成功的值，失败有失败的原因
+
+- 当状态 `state` 为 `fulfilled`，则执行 `onFulfilled`，传入 `this.value`。当状态 `state` 为 `rejected`，则执行 `onRejected`，传入 `this.reason`
+
+- `onFulfilled`,`onRejected` 如果他们是函数，则必须分别在 `fulfilled`，`rejected` 后被调用，`value` 或 `reason` 依次作为他们的第一个参数
+
+当 `resolve` 在 `setTomeout` 内执行，`then` 时 `state` 还是 `pending` 等待状态 我们就需要在 `then` 调用的时候，将成功和失败存到各自的数组，一旦 `reject` 或者 `resolve`，就调用它们
+
+为了达成链式，我们默认在第一个 `then` 里返回一个 `promise`。秘籍规定了一种方法，就是在 `then` 里面返回一个新的 `promise`,称为 `promise2：promise2 = new Promise((resolve, reject)=>{})`
+
+```javascript
+class Promise {
+  constructor(executor) {
+    // `pending`（等待态）为初始态
+    this.state = "pending";
+    // 成功，接收参数 `value`
+    this.value = undefined;
+    // 失败，接收参数 `reason`
+    this.reson = undefined;
+    // 成功存放的数组
+    this.onResolvedCallbacks = [];
+    // 失败存放法数组
+    this.onRejectedCallbacks = [];
+
+    const resolve = (value) => {
+      // state改变,resolve调用就会失败
+      if (this.state == "pending") {
+        // resolve调用后，state转化为成功态
+        this.state = "fulfilled";
+        this.value = value;
+        // 一旦resolve执行，调用成功数组的函数
+        this.onResolvedCallbacks.forEach((func) => func());
+      }
+    };
+
+    const reject = (reason) => {
+      // state改变,reject调用就会失败
+      if (this.state === "pending") {
+        // reject调用后，state转化为失败态
+        this.state = "rejected";
+        this.reason = reason;
+        // 一旦reject执行，调用失败数组的函数
+        this.onRejectedCallbacks.forEach((func) => func());
+      }
+    };
+
+    // 如果executor执行报错，直接执行reject
+    try {
+      executor(resolve, reject);
+    } catch (err) {
+      reject(err);
+    }
+  }
+
+  // then 方法 有两个参数onFulfilled onRejected
+  then(onFuifilled, onRejected) {
+    // onFulfilled如果不是函数，就忽略onFulfilled，直接返回value
+    onFulfilled =
+      typeof onFulfilled === "function" ? onFulfilled : (value) => value;
+    // onRejected如果不是函数，就忽略onRejected，直接扔出错误
+    onRejected =
+      typeof onRejected === "function"
+        ? onRejected
+        : (err) => {
+            throw err;
+          };
+
+    // 声明返回的promise2
+    const promise2 = new Promise((resolve, reject) => {
+      // 状态为fulfilled，执行onFulfilled，传入成功的值
+      if (this.state === "fuifilled") {
+        // 异步
+        setTimeout(() => {
+          try {
+            const x = onFuilled(this.value);
+            // resolvePromise函数，处理自己return的promise和默认的promise2的关系
+            this.resolvePromise(promise2, x, resolve, reject);
+          } catch (e) {
+            reject(e);
+          }
+        }, 0);
+      }
+
+      // 状态为fulfilled，执行onFulfilled，传入成功的值
+      if (this.state === "rejected") {
+        // 异步
+        setTimeout(() => {
+          // 如果报错
+          try {
+            const x = onRejected(this.reason);
+            this.resolvePromise(promise2, x, resolve, reject);
+          } catch (e) {
+            reject(e);
+          }
+        }, 0);
+      }
+
+      // 当状态state为pending时
+      if (this.state === "pending") {
+        // onFulfilled传入到成功数组
+        this.onResolvedCallbacks.push(() => {
+          // 异步
+          setTimeout(() => {
+            try {
+              const x = onFuilled(this.value);
+              this.resolvePromise(promise2, x, resolve, reject);
+            } catch (e) {
+              reject(e);
+            }
+          }, 0);
+        });
+        // onRejected传入到失败数组
+        this.onRejectedCallbacks.push(() => {
+          // 异步
+          setTimeout(() => {
+            try {
+              const x = onRejected(this.reason);
+              this.resolvePromise(promise2, x, resolve, reject);
+            } catch (e) {
+              reject(e);
+            }
+          }, 0);
+        });
+      }
+    });
+
+    // 返回promise，完成链式
+    return promise2;
+  }
+
+  resolvePromise(promise2, x, resolve, reject) {
+    // 循环引用报错
+    if (x === promise2) {
+      // reject报错
+      return reject(new TypeError("Chaining cycle detected for promise"));
+    }
+    // 防止多次调用
+    let called;
+    // x不是null 且x是对象或者函数
+    if (x != null && (typeof x === "object" || typeof x === "function")) {
+      try {
+        // A+规定，声明then = x的then方法
+        let then = x.then;
+        // 如果then是函数，就默认是promise了
+        if (typeof then === "function") {
+          // 就让then执行 第一个参数是this   后面是成功的回调 和 失败的回调
+          then.call(
+            x,
+            (y) => {
+              // 成功和失败只能调用一个
+              if (called) return;
+              called = true;
+              // resolve的结果依旧是promise 那就继续解析
+              resolvePromise(promise2, y, resolve, reject);
+            },
+            (err) => {
+              // 成功和失败只能调用一个
+              if (called) return;
+              called = true;
+              reject(err); // 失败了就失败了
+            }
+          );
+        } else {
+          resolve(x); // 直接成功即可
+        }
+      } catch (e) {
+        // 也属于失败
+        if (called) return;
+        called = true;
+        // 取then出错了那就不要在继续执行了
+        reject(e);
+      }
+    } else {
+      resolve(x);
+    }
+  }
+}
+```
+
+```javascript
+// Promise.all/race 的使用示例
+function test(num) {
+  return new Promise((resolve, reject) => {
+    if (num < 5) {
+      setTimeout(() => {
+        resolve(`执行成功${num}小于5`);
+      }, 1000);
+    }
+    if (num > 5) {
+      setTimeout(() => {
+        reject(`执行失败${num}大于5`);
+      }, 500);
+    }
+  });
+}
+let p1 = test(3);
+let p2 = test(8);
+let p3 = Promise.reject("执行结束");
+
+Promise.all([p1, p2])
+  .then((result) => {
+    console.log(result);
+  })
+  .catch((error) => {
+    console.error(error); // 执行失败8大于5
+  });
+
+Promise.race([p1, p3, p2])
+  .then((result) => {
+    console.log(result);
+  })
+  .catch((error) => {
+    console.error(error); // 执行结束
+  });
+```
+
+> `Promise.all` 可以将多个 `Promise` 实例包装成一个新的 `Promise` 实例。同时，成功和失败的返回值是不同的，成功的时候返回的是一个结果数组，而失败的时候则返回最先被 reject 失败状态的值。
+
+> `Promse.race` 就是赛跑的意思，意思就是说，`Promise.race([p1, p2, p3])`里面哪个结果获得的快，就返回那个结果，不管结果本身是成功状态还是失败状态。
+
+```javascript
+Promise._all = (list) =>
+  new Promise((resolve, reject) => {
+    let resP = [];
+    let count = 0;
+    list.forEach((index, pro) => {
+      resolve(pro).then(
+        (res) => {
+          count++;
+          resP[index] = res;
+          if (count === list.length) resove(resP);
+        },
+        (err) => {
+          reject(err);
+        }
+      );
+    });
+  });
+Promise._race = list = new Promise((resolve, reject) => {
+  list.forEach((pro) => {
+    pro.then(resove, reject);
+  });
+});
+```
+
 #### JS 异步解决方案的发展历程以及优缺点
 
 ##### 1.回调函数 callback
@@ -675,74 +938,6 @@ async function test() {
 
 优点：代码清晰，处理了回调地狱，不用写一大堆 `then` 回调
 缺点：将异步代码改造为回调，如果多个异步之间没有依赖会降低性能
-
-#### 手写 Promise.all/race
-
-```javascript
-// Promise.all/race 的使用示例
-function test(num) {
-  return new Promise((resolve, reject) => {
-    if (num < 5) {
-      setTimeout(() => {
-        resolve(`执行成功${num}小于5`);
-      }, 1000);
-    }
-    if (num > 5) {
-      setTimeout(() => {
-        reject(`执行失败${num}大于5`);
-      }, 500);
-    }
-  });
-}
-let p1 = test(3);
-let p2 = test(8);
-let p3 = Promise.reject("执行结束");
-
-Promise.all([p1, p2])
-  .then((result) => {
-    console.log(result);
-  })
-  .catch((error) => {
-    console.error(error); // 执行失败8大于5
-  });
-
-Promise.race([p1, p3, p2])
-  .then((result) => {
-    console.log(result);
-  })
-  .catch((error) => {
-    console.error(error); // 执行结束
-  });
-```
-
-> `Promise.all` 可以将多个 `Promise` 实例包装成一个新的 `Promise` 实例。同时，成功和失败的返回值是不同的，成功的时候返回的是一个结果数组，而失败的时候则返回最先被 reject 失败状态的值。
-
-> `Promse.race` 就是赛跑的意思，意思就是说，`Promise.race([p1, p2, p3])`里面哪个结果获得的快，就返回那个结果，不管结果本身是成功状态还是失败状态。
-
-```javascript
-Promise._all = (list) =>
-  new Promise((resolve, reject) => {
-    let resP = [];
-    let count = 0;
-    list.forEach((index, pro) => {
-      resolve(pro).then(
-        (res) => {
-          count++;
-          resP[index] = res;
-          if (count === list.length) resove(resP);
-        },
-        (err) => {
-          reject(err);
-        }
-      );
-    });
-  });
-Promise._race = list = new Promise((resolve, reject) => {
-  list.forEach((pro) => {
-    pro.then(resove, reject);
-  });
-});
-```
 
 #### HTTP2 多路复用
 
