refactor: 优化深拷贝

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -26,18 +26,18 @@ console.log(arr2);
 
 ```javascript
 // 手写深拷贝
- function deepClone(obj) {
-      if (typeof obj !== 'object') return obj;
-      if (type window !== 'undefined' && window.JSON) {
-        return JSON.parse(JSON.stringify(obj))
-      } else {
-        let newObj = obj.constructor === Array ? [] : {};
-        for (let key in obj) {
-          newObj[key] = typeof obj[key] === 'object' ? deepClone(obj[key]) : obj[key];
-        }
-        return newObj;
-      }
-    }
+function deepClone(obj, hash = new WeakMap()) {
+  if (typeof obj !== "object") return obj;
+  if (hash.has(obj)) return hash.get(obj);
+
+  let newObj = obj.constructor === Array ? [] : {};
+  hash.set(obj, newObj); // hash 解决循环引用问题
+
+  for (let key in obj) {
+    newObj[key] = typeof obj[key] === "object" ? deepClone(obj[key]) : obj[key];
+  }
+  return newObj;
+}
 ```
 
 ##### 2）合并对象的功能
