feat: 增加函数式编程

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -110,3 +110,37 @@ Array.prototype.flat = function () {
 ##### 说说 import 异步方法
 
 > `import('xxModule')`它会单独打成一个包，采用动态加载的方式，具体过程：当用户触发其加载的动作时，会动态的在 `head` 标签中创建一个 `script` 标签，然后发送一个 `http` 请求，加载模块，模块加载完成以后自动执行其中的代码，主要的工作有两个，更改缓存中模块的状态，另一个就是执行模块代码。
+
+#### 函数式编程
+
+命令式编程中 `典型` 的方法和过程都深深地根植于它们所在的环境中，通过状态、依赖和有效作用达成；纯函数与此相反，它与环境无关，只要我们愿意，可以在任何地方运行它
+
+> 面向对象语言的问题是，它们永远都要随身携带那些隐式的环境。你只需要一个香蕉，但却得到一个拿着香蕉的大猩猩...以及整个丛林
+
+##### 函数与其他数据类型一样，处于平等地位
+
+可作为变量一样被传递、返回或者在函数中嵌套函数。可作为参数。使用总有返回值的表达式而不是语句
+
+##### 函数应该纯天然，无副作用
+
+副作用是指，函数内部与外部互动，产生运算以外的其他结果。 例如在函数调用的过程中，利用并修改到了外部的变量，那么就是一个有副作用的函数。副作用包含：
+
+- 改变了任何外部变量或对象属性（例如，全局变量，或者一个在父级函数作用域链上的变量）
+- 写日志
+- 在屏幕输出
+- 写文件
+- 发网络请求
+- 触发任何外部进程
+- 调用另一个有副作用的函数
+
+##### 引用透明
+
+纯函数的运行不应该依赖于外部变量或状态，只依赖于输入的参数。对于相同的输入参数，返回的结果一定相同。
+
+##### 不可变量
+
+如果要改变变量，则需要把数据 deep copy 出去进行修改
+
+###### 题外话
+
+_`react` 在 `16.8` 引入了 `hooks` 目的就是为了拥抱`函数式编程`，让函数式组件有了状态和其他 `react` 特性。_
