feat: 增加 PWA 简介

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -144,3 +144,18 @@ Array.prototype.flat = function () {
 ###### 题外话
 
 _`react` 在 `16.8` 引入了 `hooks` 目的就是为了拥抱`函数式编程`，让函数式组件有了状态和其他 `react` 特性。_
+
+#### PWA 简介
+
+`渐进式网络应用`（PWA）是谷歌在 2015 年底提出的概念。基本上算是 `web` 应用程序，但在外观和感觉上与原生 `app` 类似。支持 `PWA` 的网站可以提供脱机工作、推送通知和设备硬件访问等功能。具有以下优点：
+
+**1.更小更快**：渐进式的 web 应用程序比原生应用程序小得多。他们甚至不需要安装。这是他们没有浪费磁盘空间和加载速度非常快。
+**2.响应式界面**：PWA 支持的网页能够自动适应各种屏幕大小。它可以是手机、平板、台式机或笔记本。
+**3.无需更新**：大多数移动应用程序需要每周定期更新。与普通网站一样，每当用户交互发生且不需要应用程序或游戏商店批准时，PWA 总是加载最新更新版本。
+**4.高性价比**：原生移动应用需要分别为 Android 和 iOS 设备开发，开发成本非常高。另一方面，PWAs 有着相同的功能，但只是先前价格的一小部分，开发成本低。
+**5.SEO 优势**：搜索引擎可以发现 PWAs，并且加载速度非常快。就像其他网站一样，它们的链接也可以共享。提供良好的用户体验和结果，在 SEO 排名提高。
+**6.脱机功能**：由于 service worker API 的支持，可以在脱机或低 internet 连接中访问 PWAs。
+**7.安全性**：PWAs 通过 HTTPS 连接传递，并在每次交互中保护用户数据。
+**8.推送通知**：通过推送通知的支持，PWAs 轻松地与用户进行交互，提供非常棒的用户体验。
+**9.绕过应用商店**：原生 app 如果需要任何新的更新,需要应用商店几天的审批，且有被拒绝或禁止的可能性,对于这方面来说，PWAs 有它独特的优势，不需要 App Store 支持。更新版本可以直接从 web 服务器加载，无需 App Store 批准。
+**10.零安装**：在浏览过程中，PWA 会在手机和平板电脑上有自己的图标，就像移动应用程序一样，但不需要经过冗长的安装过程。
