feat: 增加 React v15 和 v16 比较

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -319,6 +319,56 @@ React 和 Vue 做的假设是：
 
 但是 React 认为，前端碰到上面的第一种情况概率很小，第二种情况又可以通过提示用户，让用户去解决，因此这个取舍是值得的。没有牺牲空间复杂度，却换来了在大多数情况下时间上的巨大提升。
 
+#### React v15 和 v16 比较
+
+##### React15 架构可以分为两层：
+
+- **Reconciler（协调器）** —— 负责找出变化的组件
+- **Renderer（渲染器）** —— 负责将变化的组件渲染到页面上
+
+**Reconciler（协调器）** ：我们知道，在 React 中可以通过 this.setState、this.forceUpdate、ReactDOM.render 等 API 触发更新。每当有更新发生时，Reconciler 会做如下工作：
+
+- 调用函数组件、或 class 组件的 render 方法，将返回的 JSX 转化为虚拟 DOM
+- 将虚拟 DOM 和上次更新时的虚拟 DOM 对比
+- 通过对比找出本次更新中变化的虚拟 DOM
+- 通知 Renderer 将变化的虚拟 DOM 渲染到页面上
+
+**Renderer（渲染器）**：由于 React 支持跨平台，所以不同平台有不同的 Renderer。我们前端最熟悉的是负责在浏览器环境渲染的 Renderer —— ReactDOM (opens new window)。除此之外，还有：
+
+- ReactNative (opens new window)渲染器，渲染 App 原生组件
+- ReactTest (opens new window)渲染器，渲染出纯 Js 对象用于测试
+- ReactArt (opens new window)渲染器，渲染到 Canvas, SVG 或 VML (IE8)
+
+**React15 架构的缺点**
+
+- Reconciler 和 Renderer 是交替工作
+- 同步更新，无法中断
+
+在 Reconciler 中，mount 的组件会调用 mountComponent (opens new window)，update 的组件会调用 updateComponent (opens new window)。这两个方法都会递归更新子组件。由于递归执行，所以更新一旦开始，中途就**无法中断**。当层级很深时，递归更新时间超过了 16ms，用户交互就会卡顿。
+
+##### React16 架构可以分为三层：
+
+- **Scheduler（调度器）** —— 调度任务的优先级，高优任务优先进入 Reconciler
+- **Reconciler（协调器）** —— 负责找出变化的组件
+- **Renderer（渲染器）** —— 负责将变化的组件渲染到页面上
+
+**Scheduler（调度器）**：既然我们以浏览器是否有剩余时间作为任务中断的标准，那么我们需要一种机制，当浏览器有剩余时间时通知我们。React 自己实现了类似浏览器 requestIdleCallback Api 的方法来实现这一机制。
+
+**Reconciler（协调器）**：协调器重构的一大目的是将老的同步更新的架构变为异步可中断更新。异步可中断更新可以理解为：更新在执行过程中可能会被打断（浏览器时间分片用尽或有更高优任务插队），当可以继续执行时恢复之前执行的中间状态。
+
+```javascript
+function workLoopConcurrent() {
+  // 每次循环都会调用shouldYield判断当前是否有剩余时间。
+  while (workInProgress !== null && !shouldYield()) {
+    workInProgress = performUnitOfWork(workInProgress);
+  }
+}
+```
+
+在 React16 中，Reconciler 与 Renderer 不再是**交替工作**。当 Scheduler 将任务交给 Reconciler 后，Reconciler 会为变化的虚拟 DOM 打上代表**增/删/更新**的标记。整个 Scheduler 与 Reconciler 的工作都在内存中进行。只有当所有组件都完成 Reconciler 的工作，才会统一交给 Renderer。
+
+**Renderer（渲染器）**：Renderer 根据 Reconciler 为虚拟 DOM 打的标记，同步执行对应的 DOM 操作。
+
 #### 说说对 SSR 的了解
 
 `SSR` 也就是服务端渲染，也就是将 `Vue` 在客户端把标签渲染成 `HTML` 的工作放在服务端完成，然后再把 `html` 直接返回给客户端
